This IE 7 navigation style fixes the weird scrollbar that appears when navigation is expanded. It does not appear to cascade the width properly from the parent.

--- a/wdn/templates_3.0/css/ie.css
+++ b/wdn/templates_3.0/css/ie.css
@@ -55,7 +55,7 @@ ul#wdn_tool_links li {
 }
 
 /** CSS3 Workarounds for #navigation **/
-#wdn_navigation_wrapper {zoom:1;}
+body.fixed #wdn_navigation_wrapper {*width:960px;}
 #navigation > ul > li.start  {
     clear:left;
 }
